@@ -1,3 +1,11 @@
+2011-09-19  WOnder93  <omosnacek@gmail.com>
+
+	* Main.cs:
+	  Added a command to change server password.
+
+	* AssemblyInfo.cs:
+	  
+
 2011-09-15  WOnder93  <omosnacek@gmail.com>
 
 	* AssemblyInfo.cs:
